# src/openapi/openapi.yaml
@@ -29,8 +29,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Planet'
-        "204":
-          description: No planets
     put:
       summary: Update an existing planet description
       description: Update Planet
@@ -42,20 +40,6 @@ paths:
       responses:
         "200":
           description: The updated Planet
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Planet'
-    post:
-      summary: Create a new Planet
-      description: Create planet
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Planet'
-      responses:
-        "201":
           content:
             application/json:
               schema:
@@ -78,11 +62,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Planet'
-        "204":
-          description: The planet is not found
   /api/v1/planets/{name}:
     delete:
       summary: Deletes an exiting Planet
+      description: Delete Planet
       parameters:
         - name: name
           in: path
@@ -90,7 +73,12 @@ paths:
           schema:
             type: string
       responses:
-        "204": {}
+        "204":
+          description: No content
+          content:
+            application/json:
+              schema:
+                type: object
 components:
   schemas:
     Planet:
